fix: text overflow

--- a/pages/leadership/class-representatives/page.module.css
+++ b/pages/leadership/class-representatives/page.module.css
@@ -133,3 +133,39 @@
   font-weight: 400;
   letter-spacing: 3px;
 }
+
+@media screen and (max-width: 768px) {
+  .bannerText h1 {
+    font-size: 2rem;
+  }
+  .bannerText p {
+    font-size: 1rem;
+  }
+  .header h1 {
+    font-size: 2rem;
+  }
+  .header p {
+    font-size: 1rem;
+  }
+  .team__container {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .team__container h1 {
+    font-size: 1.5rem;
+  }
+  .card__ctn {
+    padding: 0.5rem;
+    text-align: center;
+  }
+  .card__ctn h2 {
+    font-size: 1.2rem;
+  }
+  .card__ctn p {
+    font-size: 0.8rem;
+  }
+
+  .reps__ctn {
+    grid-template-columns: 1fr;
+  }
+}
