--- a/styles/Transition.module.css
+++ b/styles/Transition.module.css
@@ -23,5 +23,6 @@
 @media screen and (max-width: 768px) {
   .transition__inner {
     font-size: 2rem;
+    text-align: center;
   }
 }
